--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "eslint-config",
-  "version": "1.0.0",
-  "description": ".eslintrc and dependencies for awesome linting",
-  "author": "Adam Anderson",
-  "license": "ISC",
-  "homepage": "https://github.com/adammanderson/eslint-config#readme",
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
+  "name": "walruslint",
+  "version": "0.0.1",
+  "author": {
+    "name": "Adam Anderson"
+  },
+  "private": false,
+  "license": "MIT",
+  "main": "index.js",
+  "peerDependencies": {
+    "eslint": ">= 3",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.3"
+    "eslint-plugin-react": "^7.12.4"
   }
 }
