--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "private": false,
   "license": "MIT",
+  "repository": "https://github.com/adammanderson/walruslint",
   "main": "index.js",
   "peerDependencies": {
     "eslint": ">= 3",
