--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "walruslint",
+  "name": "eslint-config-walruslint",
   "version": "0.0.1",
   "author": {
     "name": "Adam Anderson"
