--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": "https://github.com/adammanderson/walruslint",
   "main": "index.js",
-  "devDependencies": {
+  "peerDependencies": {
     "eslint": ">= 3",
     "babel-eslint": "^10.0.1",
     "eslint-config-airbnb": "^17.1.0",
